# auto-bay

./: .env.example  .gitignore  Makefile  docker-compose.dev.yml  docker-compose.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 156bc3da2c48_initial_schema.py
backend/app/: config.py  dependencies.py  main.py
backend/app/ai/: llm.py
backend/app/ai/agents/: customer_support.py  listing_generator.py  marketing_agent.py  pricing_optimizer.py  product_research.py
backend/app/core/: events.py  exceptions.py  security.py
backend/app/db/: base.py  session.py
backend/app/db/repositories/: base.py
backend/app/integrations/: base.py  registry.py  retry.py
backend/app/integrations/amazon/: client.py
backend/app/integrations/ebay/: client.py
backend/app/integrations/shopify/: client.py
backend/app/integrations/tiktok/: client.py
backend/app/modules/auth/: models.py  router.py  schemas.py  service.py
backend/app/modules/customer_service/: models.py  router.py  service.py
backend/app/modules/inventory/: models.py  router.py  schemas.py  service.py
backend/app/modules/listings/: models.py  router.py  schemas.py  service.py
backend/app/modules/marketing/: models.py  router.py  service.py
backend/app/modules/orders/: models.py  router.py  schemas.py  service.py
backend/app/modules/pricing/: models.py  router.py  service.py
backend/app/modules/products/: models.py  router.py  schemas.py  service.py
backend/app/workers/: celery_app.py
backend/app/workers/tasks/: sync_inventory.py  sync_orders.py  (+2 more)
(+16 files in other folders)
